# gpha-mscape-nf-amr

./: .climb-ids.txt.swp  .gitignore  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  .pre-commit-config.yaml  DEV.md  README.md  environment.yml  generate-sample-sheet.py  main.nf  main.py  nextflow.config  nf-test.config  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.ipynb_checkpoints/: abricate_out-checkpoint.txt  output_report-checkpoint.tsv  output_summary-checkpoint.tsv  test-sample-sheet-checkpoint.csv
.nextflow/: history
.nextflow/cache/21c62ea0-1e9b-43f3-88a2-1f42b2123633/: index.maniac_koch
.nextflow/cache/54abb4fe-a183-4437-9d58-5456a98dd9e1/: index.special_varahamihira  index.stoic_mercator
conf/: base.config  modules.config  params.config  test.config
modules/: abricate.nf  gunzip.nf  scagaire.nf  taxonomy.nf
modules/local/: abricate.nf  gunzip.nf  onyx_upload.nf  report.nf  samplesheet.nf  taxonomy.nf
scripts/: retrieve_taxon.py
subworkflows/: amr_analysis.nf  pe_amr_analysis.nf  run_abricate.nf  se_amr_analysis.nf
test/: climb_ids.txt  test-sample-sheet.csv
test/test_data/: ERR3077524_GCF_013349085.1_1x.abricate_card_out.tsv  ERR3077524_GCF_013349085.1_1x_kraken_pluspf_8gb.report.json  ERR3077524_GCF_013349085.1_1x_kraken_pluspf_8gb.report.tsv
tests/subworkflows/: amr_analysis.nf.test
tests/test_data/: ERR3077524_GCF_013349085.1.test_data.abricate_card_out.tsv  ERR3077524_GCF_013349085.1.test_data.kraken_pluspf_8gb.report.json  ERR3077524_GCF_013349085.1.test_data.kraken_pluspf_8gb.tsv  ERR3077524_GCF_013349085.1_1x_kraken_pluspf_8gb.tsv  test-sample-sheet.csv
(+81 files in other folders)
